# epideux

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  schedule_fails.cpp  single_home.cpp  two_age.cpp
examples/include/matplotlibcpp/: matplotlibcpp.h
include/epideux/: epideux.h
src/: itinerary_entry.cpp  location.cpp  model.cpp  person.cpp
tests/: CMakeLists.txt  test_move_location.cpp  test_small_simulation.cpp
